kubernetes/applications/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  type: ClusterIP
  selector:
    app: frigate
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: rtsp
      port: 8554
      targetPort: rtsp
    - name: webrtc-tcp
      port: 8555
      targetPort: webrtc-tcp
